toggle to hamburger menu at 875px to avoid nav bar overflow

--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -198,7 +198,7 @@
 		color: $acm-cobalt !important;
 	}
 
-	@media (max-width: 700px) {
+	@media (max-width: 875px) {
 		#desktop-nav { display: none; }
 		#mobile-nav { display: inline-block; }
 	}
